# Frames-beam

./: .gitignore  .travis.yml  CHANGELOG.md  Frames-beam.cabal  LICENSE  README.md  shell.nix  stack.yaml
.github/workflows/: ci.yml
data/: users.sql
src/: FramesBeam.hs  UsageExample.hs
src/Frames/SQL/Beam/: Postgres.hs
src/Frames/SQL/Beam/Postgres/: BeamSchemaGen.hs  Helpers.hs  Query.hs  Streaming.hs  Vinylize.hs
src/FramesBeam/: BeamSchemaGen.hs  Helpers.hs  MigrationAutogen.hs  Query.hs  Streaming.hs  Vinylize.hs
test/: LibSpec.hs  NewBeamSchema.hs
