name:                Frames-beam
version:             0.1.0.0
synopsis:            A library for accessing Postgres tables as data frames (i.e. an in-memory data structure).  
description:         
      This library provides a way to access Postgres tables as data frames by providing helpers for generating 
      types (at compile time) corresponding to a database schema  and canned queries to execute against a database
      instance. Additionally, provides utilities to convert plain Haskell records (i.e. the format of query results) 
      to vinyl records (upon which the Frames library is based). Can be used for interactive exploration by loading
      all data in-memory at once (and converting to a data frame), and also in a constant memory streaming mode.  
homepage:            https://github.com/gagandeepb/Frames-beam
license:             BSD3
license-file:        LICENSE
author:              Gagandeep Bhatia
maintainer:          gagandeepbhatia.in@gmail.com
copyright:           2018 Gagandeep Bhatia
category:            Data, Database, Data Science
build-type:          Simple
extra-source-files:  README.md data/users.sql CHANGELOG.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     FramesBeam
                    ,  FramesBeam.BeamSchemaGen
                    ,  FramesBeam.Vinylize
                    ,  FramesBeam.Query
                    ,  FramesBeam.Streaming
  other-modules:       FramesBeam.Helpers              
  build-depends:       base >= 4.7 && < 5
                    ,  beam-core
                    ,  beam-postgres
                    ,  beam-migrate
                    ,  text
                    ,  postgresql-simple
                    ,  Frames
                    ,  template-haskell
                    ,  generics-sop
                    ,  vinyl
                    ,  process
                    ,  conduit
                    ,  monad-control
                    ,  bytestring
                    

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall 
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
                       NewBeamSchema
  build-depends:       base
                     , Frames-beam
                     , hspec
                     , hspec-core
                     , QuickCheck
                     , conduit
                     , generics-sop
                     , text
                     , vinyl
                     , Frames
                     , beam-core
                     , beam-postgres
                     , beam-migrate
                     , bytestring

source-repository head
  type:     git
  location: https://github.com/gagandeepb/Frames-beam
