name:                Frames-beam
version:             0.1.0.2
synopsis:            A library for accessing Postgres tables as in-memory data structures.   
description:         
      This library provides a way to access Postgres tables as data frames by providing helpers for generating 
      types (at compile time) corresponding to a database schema  and canned queries to execute against a database
      instance. Additionally, provides utilities to convert plain Haskell records (i.e. the format of query results) 
      to vinyl records (upon which the Frames library is based). Can be used for interactive exploration by loading
      all data in-memory at once (and converting to a data frame), and also in a constant memory streaming mode.
      Start here: "Frames.SQL.Beam.Postgres".
        
homepage:            https://github.com/gagandeepb/Frames-beam
license:             BSD3
license-file:        LICENSE
author:              Gagandeep Bhatia
maintainer:          gagandeepbhatia.in@gmail.com
copyright:           2018 Gagandeep Bhatia
category:            Data, Database, Data Science
build-type:          Simple
extra-source-files:  README.md data/users.sql CHANGELOG.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Frames.SQL.Beam.Postgres
                    ,  Frames.SQL.Beam.Postgres.BeamSchemaGen
                    ,  Frames.SQL.Beam.Postgres.Vinylize
                    ,  Frames.SQL.Beam.Postgres.Query
                    ,  Frames.SQL.Beam.Postgres.Streaming
  other-modules:       Frames.SQL.Beam.Postgres.Helpers              
  build-depends:       
          base >=4.7 && <5.0
        , beam-core >=0.7.2.1 
        , beam-postgres >=0.3.2.0
        , beam-migrate >=0.3.2.1
        , text >=1.2.3.0
        , postgresql-simple >=0.5.3.0
        , Frames >=0.3.0.2 && <0.5
        , template-haskell >=2.12.0.0
        , generics-sop >=0.3.2.0
        , vinyl >=0.7.0 && <0.9
        , process >=1.6.1.0
        , conduit >=1.3.0.2 
        , monad-control >=1.0.2.3 
        , bytestring >=0.10.8.2
        , scientific >=0.3.5.3 
        , time >=1.8.0.2
        , uuid-types >=1.0.3 
                    

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall 
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
                       NewBeamSchema
  build-depends:       
          base >=4.10.1.0 && <5.0
        , Frames-beam -any
        , hspec >=2.4.8
        , hspec-core >=2.4.8
        , QuickCheck >=2.10.1 
        , conduit >=1.3.0.2 
        , generics-sop >=0.3.2.0 
        , text >=1.2.3.0
        , vinyl >=0.7.0 && <0.9
        , Frames >=0.3.0.2 && <0.5
        , beam-core >=0.7.2.1 
        , beam-postgres >=0.3.2.0
        , beam-migrate >=0.3.2.1
        , bytestring >=0.10.8.2 

source-repository head
  type:     git
  location: https://github.com/gagandeepb/Frames-beam
